Fix notification z-index & add documentation

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  z-index: 99;
 }
 
 .makki-toast-container[data-position^="top-"] {
